--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@ endblock %} {% block head %}
   <div class="w-full flex flex-col lg:grid lg:grid-cols-12 gap-6">
     <div class="lg:col-span-8 relative order-1">
       <div
-        class="video-container aspect-video shadow-2xl rounded-2xl overflow-hidden relative"
+        class="video-container aspect-square lg:aspect-video shadow-2xl rounded-2xl overflow-hidden relative"
       >
         <div
           class="absolute top-4 left-4 z-50 bg-black/60 backdrop-blur-md p-2 px-3 rounded-xl flex items-center gap-2 border border-white/10"
