--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
@@ -35,7 +35,7 @@
           Secure Access Terminal
         </p>
       </div>
-      <form method="POST" class="space-y-6">
+      <form id="loginForm" method="POST" class="space-y-6">
         <div>
           <input
             type="text"
