--- a/templates/riwayat.html
+++ b/templates/riwayat.html
@@ -185,7 +185,7 @@
 <div id="calendar-tooltip">
   <div class="tooltip-header">
     <i data-lucide="users" class="w-3 h-3"></i>
-    <span id="tooltip-name">Security Log Details</span>
+    <span id="tooltip-name">Attendance Log Details</span>
   </div>
   <div id="tooltip-time"></div>
 </div>
