--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Smart Scan Pro - Auto Voice{%
 endblock %} {% block head %}
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
+<script src="{{ url_for('static', filename='mediapipe/face_detection.js') }}"></script>
+<script src="{{ url_for('static', filename='mediapipe/camera_utils.js') }}"></script>
 {% endblock %} {% block content %}
 <main
   class="max-w-7xl mx-auto p-4 md:p-6 flex items-center justify-center min-h-screen lg:min-h-[calc(100vh-100px)] page-animate"
