--- a/templates/tambah_wajah.html
+++ b/templates/tambah_wajah.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %} {% block title %}Pendaftaran - AbsensiPro{% endblock
-%} {% block head %}
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-{% endblock %} {% block content %}
+%} {% block content %}
 <main
   class="max-w-2xl mx-auto p-4 md:p-8 page-entrance min-h-screen flex items-center justify-center"
 >
