--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@ endblock %} {% block head %}
         <h3
           class="text-[9px] font-black text-slate-500 uppercase tracking-[0.3em] mb-4"
         >
-          Daftar Hadir
+          Attendance List
         </h3>
         <div
           id="today-logs"
