--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="id">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,22 +37,24 @@
       class="login-glass p-10 rounded-[40px] w-full max-w-md shadow-2xl mx-4 animate-fade-in"
     >
       <div class="text-center mb-10">
-        <div class="flex items-center justify-center gap-3">
-          <div
-            class="w-10 h-10 md:w-11 md:h-11 bg-blue-600/10 rounded-2xl flex items-center justify-center border border-blue-500/20 shadow-[0_0_15px_rgba(59,130,246,0.2)]"
-          >
-            <i
-              data-lucide="shield-check"
-              class="text-blue-400 w-5 h-5 md:w-6 md:h-6"
-            ></i>
-          </div>
-          <div class="flex flex-col">
-            <span
-              class="font-black text-base md:text-[2rem] tracking-tighter uppercase leading-none"
-              >Absensi<span class="text-blue-500">Pro</span></span
+        <a href="/" class="inline-block">
+          <div class="flex items-center justify-center gap-3">
+            <div
+              class="w-10 h-10 md:w-11 md:h-11 bg-blue-600/10 rounded-2xl flex items-center justify-center border border-blue-500/20 shadow-[0_0_15px_rgba(59,130,246,0.2)]"
             >
+              <i
+                data-lucide="shield-check"
+                class="text-blue-400 w-5 h-5 md:w-6 md:h-6"
+              ></i>
+            </div>
+            <div class="flex flex-col">
+              <span
+                class="font-black text-base md:text-[2rem] tracking-tighter uppercase leading-none"
+                >Absensi<span class="text-blue-500">Pro</span></span
+              >
+            </div>
           </div>
-        </div>
+        </a>
         <p
           class="text-slate-500 text-[10px] uppercase tracking-[0.3em] mt-3 font-bold"
         >
