--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@ endblock %} {% block head %}
             class="hidden absolute inset-0 flex flex-col items-center justify-center opacity-40"
           >
             <i
-              data-lucide="calendar-x"
+              data-lucide="info"
               class="w-10 h-10 text-slate-500 mb-3"
             ></i>
             <p
